--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@ a {
 
 .menubutton {
     cursor: pointer;
-    position: absolute;
+    /* position: absolute;
     top: 40px;
-    right: 30px;
+    right: 30px; */
     z-index: 2;
     display: none;
 }
@@ -42,12 +42,16 @@ header {
     padding: 20px 0;
     font-size: 12px;
 }
-header ul {
+header ul, header nav {
     display: flex;
     flex: 1;
 }
 header li {
     padding: 0 8px;
+}
+.btn {
+    display: flex;
+    gap: 4px;
 }
 .btn i {
     padding: 5px;
@@ -225,9 +229,9 @@ footer li {
     .bottomfooter ul {
         grid-template-columns: repeat(4, 1fr);
     }
-    .btn {
+    /* .btn {
         margin-right: 50px;
-    }
+    } */
     header ul {
     display: block;
     position: absolute;
@@ -254,6 +258,16 @@ footer li {
     .show {
         transform: translate(-20px);
     }
+
+    .bottomfooter {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 40px 15px;
+    text-align: center;
+}
 }
 
 @media(max-width: 500px) {
@@ -261,10 +275,15 @@ footer li {
         grid-template-columns: 1fr;
     }
     .footercontainer {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         grid-gap: 15px;
     }
     .section3 {
     height: 300px;
     }
+    .container3,
+    .container5 {
+    width: 60%;
+    padding: 20px;
+}
 }
